--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 # Background {.unnumbered}
 
-This `Quarto` book collects all of my completed exercises and notes from @wickham_r_2016.
+This `Quarto` book collects all of my completed exercises and notes from R for Data Science @wickham_r_2016.
 
 ::: {#refs}
 :::
